adding eygpt destitnation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="destination" id="iraq">
                 <h2>iraq</h2>
             </div>
+            <div class="destination" id="eygpt">
+                <h2>eygpt</h2>
+            </div>
         </div>
     </div>
 
